clusters/rubase/mail-server/service-public-smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-public-smtp
  namespace: mail-system
  labels:
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/instance: mail-hub
    app.kubernetes.io/part-of: mail-hub
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: stalwart
    app.kubernetes.io/instance: mail-hub
  ports:
    - name: smtp
      port: 25
      targetPort: smtp
      protocol: TCP
